docs: consolidate all documentation into 3 professional files for hackathon submission

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,16 +1,42 @@
 # ContextWeave Lite Backend Configuration
 # Copy this file to .env and fill in your values
 
-# LLM API Configuration
-# For OpenAI:
-LLM_API_KEY=sk-your-openai-api-key-here
-LLM_API_BASE=https://api.openai.com/v1
-LLM_MODEL=gpt-3.5-turbo
+# ============================================
+# LLM Provider Selection
+# ============================================
+# Choose one: groq, ollama, localai
+LLM_PROVIDER=groq
 
-# For other OpenAI-compatible APIs (e.g., Azure, local models):
-# LLM_API_KEY=your-api-key
-# LLM_API_BASE=https://your-endpoint.com/v1
-# LLM_MODEL=your-model-name
+# ============================================
+# Cloud AI: Groq (Recommended for Speed)
+# ============================================
+# Get free API key from: https://console.groq.com
+LLM_API_KEY=your-groq-api-key-here
+LLM_API_BASE=https://api.groq.com/openai/v1
+LLM_MODEL=llama-3.1-8b-instant
 
+# ============================================
+# Local AI: Ollama (Recommended for Privacy)
+# ============================================
+# No API key needed!
+# 1. Install Ollama from: https://ollama.ai
+# 2. Start server: ollama serve
+# 3. Pull model: ollama pull llama3
+# 4. Set LLM_PROVIDER=ollama above
+# 
+# Ollama runs on: http://localhost:11434
+# Recommended models: llama3, mistral, codellama
+
+# ============================================
+# Local AI: LocalAI (Alternative)
+# ============================================
+# No API key needed!
+# 1. Run: docker run -p 8080:8080 localai/localai
+# 2. Set LLM_PROVIDER=localai above
+#
+# LocalAI runs on: http://localhost:8080
+
+# ============================================
 # Server Configuration
+# ============================================
 PORT=8000
