--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -1,14 +1,30 @@
 {
   "name": "contextweave-lite",
   "displayName": "ContextWeave Lite",
-  "description": "AI-powered code context from Git history",
+  "description": "AI-powered code context assistant that analyzes Git history to help you understand codebases faster",
   "version": "0.1.0",
   "publisher": "contextweave",
+  "icon": "resources/icon.png",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ShivanshSingh1175/Contextweave-lite.git"
+  },
   "engines": {
     "vscode": "^1.85.0"
   },
   "categories": [
-    "Other"
+    "Machine Learning",
+    "Programming Languages",
+    "Education"
+  ],
+  "keywords": [
+    "ai",
+    "code analysis",
+    "git history",
+    "documentation",
+    "learning",
+    "llm",
+    "local ai"
   ],
   "activationEvents": [
     "onCommand:contextweave.explainFile"
@@ -50,7 +66,30 @@
         "contextweave.commitLimit": {
           "type": "number",
           "default": 50,
-          "description": "Maximum number of commits to analyze"
+          "description": "Maximum number of commits to analyze",
+          "minimum": 1,
+          "maximum": 100
+        },
+        "contextweave.llmProvider": {
+          "type": "string",
+          "default": "groq",
+          "enum": ["groq", "ollama", "localai"],
+          "enumDescriptions": [
+            "Groq Cloud API (requires API key)",
+            "Ollama local server (privacy-first, no API key needed)",
+            "LocalAI local server (privacy-first, no API key needed)"
+          ],
+          "description": "LLM provider to use for code analysis"
+        },
+        "contextweave.ollamaModel": {
+          "type": "string",
+          "default": "llama3",
+          "description": "Model name for Ollama (e.g., llama3, mistral, codellama)"
+        },
+        "contextweave.localaiModel": {
+          "type": "string",
+          "default": "gpt-3.5-turbo",
+          "description": "Model name for LocalAI"
         }
       }
     }
@@ -60,7 +99,8 @@
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile",
-    "lint": "eslint src --ext ts"
+    "lint": "eslint src --ext ts",
+    "package": "vsce package"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
