docs: consolidate all documentation into README.md as central hub - Expanded README with architecture, API endpoints, development notes - Deleted redundant files: requirements.md, design.md, README_CONSOLIDATED.md - Kept only: README.md, PRODUCT_SPECIFICATION.md, demo/README_demo.md - Updated .gitignore to prevent future markdown sprawl

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,10 @@ logs/
 
 # OS
 Thumbs.db
+
+# Documentation scratch files (keep only official docs)
+*_NOTES.md
+*_TODO.md
+*_SCRATCH.md
+TEMP_*.md
+docs/scratch/
